// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Markdown.svelte > should render empty content 1`] = `
<body>
  <div>
    <article
      class="prose"
    />
  </div>
</body>
`;

exports[`Markdown.svelte > should render markdown text 1`] = `
<body>
  <div>
    <article
      class="prose"
    >
      <h1
        id="test"
      >
        test
      </h1>
      

    </article>
  </div>
</body>
`;
